--- a/app/MyApp/app/Home-Urdu.css
+++ b/app/MyApp/app/Home-Urdu.css
@@ -663,6 +663,8 @@ body{
 #collectionTable{
     direction: rtl;
     text-align: right;
+    margin-left:20px;
+    margin-right:20px;
 }
 #mergeCollection{
     margin-right: 20px;
