--- a/app/MyApp/app/Home.css
+++ b/app/MyApp/app/Home.css
@@ -1036,3 +1036,7 @@ form > fieldset > ul > li.bbf-field.field-selectLanguage {
     margin-left:20px;
     margin-right:20px;
 }
+.table-feedback{
+    margin-left:20px;
+    margin-right:20px
+}
